tests/data/invalid_dtds/parameter_entities_external_1/test.dtd.off
<!ENTITY % external1 SYSTEM "&foo">
